[gd_scene load_steps=15 format=3 uid="uid://bv8xvb5uksg1y"]

[ext_resource type="Script" uid="uid://k7xu8cyy73ia" path="res://dialogues/balloon.gd" id="1_36de5"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="Texture2D" uid="uid://bpjjobblq8dvt" path="res://dialogues/dialog container.png" id="2_pa16h"]
[ext_resource type="Texture2D" uid="uid://d0sl70lhnw3w6" path="res://backgrounds/temps/black.jpg" id="3_7c2jb"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="3_72ixx"]
[ext_resource type="Texture2D" uid="uid://bl70vf3n5ql65" path="res://dialogues/white_box.png" id="4_7c2jb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ooonl"]
texture = ExtResource("2_pa16h")

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
PanelContainer/styles/panel = SubResource("StyleBoxTexture_ooonl")

[sub_resource type="Animation" id="Animation_nlsx6"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Progress:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_qkmqt"]
resource_name = "progress"
loop_mode = 1
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Progress:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.2, -0.0157438, -4, -0.2, 0.0112069, 0.25, 0, -4, -0.25, 0, 0.25, 0, 0, -0.2, 0.00299701, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.5, 0.6, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1337t"]
_data = {
&"RESET": SubResource("Animation_nlsx6"),
&"progress": SubResource("Animation_qkmqt")
}

[node name="ExampleBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_36de5")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qq3yp")

[node name="Portrait" type="TextureRect" parent="Balloon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 280.0
offset_right = 805.0
offset_bottom = 1080.0
expand_mode = 4
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="Balloon"]
visible = false
clip_children = 2
layout_mode = 0
offset_left = 251.0
offset_top = 419.0
offset_right = 901.0
offset_bottom = 619.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Balloon"]
layout_mode = 0
offset_left = 417.0
offset_top = 818.0
offset_right = 1511.505
offset_bottom = 1070.0

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Giorno2" type="Sprite2D" parent="Balloon/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.78431374)
position = Vector2(544, 360)
scale = Vector2(1.0190104, 0.7092593)
texture = ExtResource("3_7c2jb")

[node name="WhiteBox" type="Sprite2D" parent="Balloon/HBoxContainer/VBoxContainer"]
visible = false
position = Vector2(146.5, 23.500055)
scale = Vector2(0.12975302, 0.046824932)
skew = -0.3630285
texture = ExtResource("4_7c2jb")

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_constants/line_separation = 4
theme_override_constants/paragraph_separation = 15
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/HBoxContainer/VBoxContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 34
theme_override_font_sizes/bold_font_size = 34
theme_override_font_sizes/bold_italics_font_size = 34
theme_override_font_sizes/italics_font_size = 34
theme_override_font_sizes/mono_font_size = 34
text = "Dialogue..."

[node name="Control" type="Control" parent="Balloon/HBoxContainer"]
custom_minimum_size = Vector2(20, 10)
layout_mode = 2
size_flags_vertical = 8

[node name="Progress" type="Polygon2D" parent="Balloon/HBoxContainer/Control"]
unique_name_in_owner = true
polygon = PackedVector2Array(0, 0, 10, 10, 20, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Balloon/HBoxContainer/Control"]
libraries = {
&"": SubResource("AnimationLibrary_1337t")
}
autoplay = "progress"

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.0
offset_top = -258.5
offset_right = 474.0
offset_bottom = -115.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
alignment = 1
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/ResponsesMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Response example"

[node name="EnableAutoButton" type="Button" parent="Balloon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1538.0
offset_top = 1028.0
offset_right = 1706.4451
offset_bottom = 1068.795
text = "AUTO"

[node name="OpenHistory" type="Button" parent="Balloon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1732.0
offset_top = 1028.0
offset_right = 1900.4451
offset_bottom = 1068.795
text = "History"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
[connection signal="pressed" from="Balloon/EnableAutoButton" to="." method="_on_enable_auto_pressed"]
